--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "apollo-server-micro": "^2.14.1",
-    "next": "9.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "graphql": "^15.0.0",
+    "graphql-tools": "^6.0.6",
+    "micro": "^9.3.4",
+    "next": "^9.4.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "swr": "^0.2.2"
   },
   "devDependencies": {
