--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "apollo-server-micro": "^2.14.1",
+    "@apollo/react-hooks": "^3.1.5",
+    "apollo": "^2.28.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-server": "^2.14.1",
     "graphql": "^15.0.0",
-    "graphql-tools": "^6.0.6",
-    "micro": "^9.3.4",
     "next": "^9.4.4",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "swr": "^0.2.2"
   },
