--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -2,15 +2,11 @@
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
-    "apollo": "^2.28.0",
+    "apollo": "^2.12.2",
     "apollo-boost": "^0.4.9",
+    "apollo-codegen": "^0.20.2",
     "apollo-server": "^2.14.1",
     "graphql": "^15.0.0",
     "next": "^9.4.4",
@@ -23,5 +19,12 @@
     "@types/node": "^14.0.9",
     "@types/react": "^16.9.35",
     "typescript": "^3.9.3"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "schema": "apollo-codegen download-schema http://localhost:4000/graphql --output ./apollo/schema.json",
+    "types": "apollo-codegen generate ./apollo/queries.ts --addTypename --schema ./apollo/schema.json --target typescript --output ./__generated__/types.ts"
   }
 }
