--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -7,6 +7,7 @@
     "apollo": "^2.12.2",
     "apollo-boost": "^0.4.9",
     "apollo-server-micro": "^2.14.2",
+    "axios": "^0.19.2",
     "graphql": "14.6.0",
     "graphql-tag": "^2.9.2",
     "next": "^9.4.4",
