--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -21,13 +21,16 @@
     "@types/node": "^14.0.9",
     "@types/react": "^16.9.35",
     "apollo-codegen": "^0.20.2",
-    "typescript": "^3.9.3"
+    "typescript": "^4.0.0-dev.20200609"
+  },
+  "resolutions": {
+    "graphql": "^14.0.2"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "schema": "apollo-codegen download-schema http://localhost:3000/api/graphql --output ./apollo/schema.json",
-    "types": "apollo-codegen generate ./apollo/queries.ts --addTypename --schema ./apollo/schema.json --target typescript --output ./types.ts"
+    "types": "apollo-codegen generate ./apollo/queries.ts --addTypename --schema ./apollo/schema.json --target typescript --output ./apollo/types.ts"
   }
 }
